--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -3,7 +3,7 @@
     <img src="{{ album.albumArtUrl }}">
     <div class="collection-album-info caption">
       <p>
-        <a class="album-name" ui-sref="album">{{ album.title }}</a>
+        <a class="album-name" ui-sref="album">{{ album.name }}</a>
         <br/>
         <a ui-sref="album">{{ album.artist }}</a>
         <br/> {{ album.songs.length }} songs
@@ -12,5 +12,3 @@
     </div>
   </div>
 </section>
-
-<ng-include src="'/templates/player_bar.html'"></ng-include>
